# eecs468-game-of-life-cuda

./: CMakeLists.txt  CpuLife.h  CudaLife.cu  CudaLifeFunctions.h  GpuLife.h  OpenGlCudaHelper.h  README.md  main.cpp  stdafx.h
include/: CpuLife.h  GpuLife.h  stdafx.h
